cabal-version:      3.0
name:               indexHaddock
version:            0.2.0.0
license:            NONE
author:             Henry Laxen
maintainer:         nadine.and.henry@pobox.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md
common warnings
    ghc-options:
                -Wall
                -fno-warn-type-defaults
                -ddump-minimal-imports
executable indexHaddock
    import:           warnings
    main-is:          indexHaddock.lhs
    build-depends:    base
                    , containers
                    , text
                    , shelly
                    , split
    hs-source-dirs:   .

    default-language: Haskell2010
  default-extensions:
    OverloadedStrings
    ExtendedDefaultRules
    NoImplicitPrelude
